--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metode Pias - Kelompok 3</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Integrasi Numerik - Metode Pias</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <nav>
-        <h1>Metode Pias</h1>
-        <a href="https://github.com/aldiannurrahman" target="_blank">About Me</a>
-    </nav>
+  <header>
+    <h1>Integrasi Numerik</h1>
+    <p>Metode Pias - Dibuat oleh Kelompok 3</p>
+  </header>
+  <main>
+    <section id="page-choose" class="active">
+      <div class="card">
+        <h2>Pilih Kaidah</h2>
+        <button onclick="goToExplanation('segiempat')">Kaidah Segiempat</button>
+        <button onclick="goToExplanation('tengah')">Kaidah Titik Tengah</button>
+      </div>
+    </section>
 
-    <div id="container">
-        <div id="step1" class="card">
-            <h2>Pilih Kaidah</h2>
-            <button onclick="showExplanation('segiempat')">Kaidah Segiempat</button>
-            <button onclick="showExplanation('tengah')">Kaidah Titik Tengah</button>
-        </div>
+    <section id="page-explanation">
+      <div class="card">
+        <h2 id="judul-kaidah"></h2>
+        <p id="penjelasan-kaidah"></p>
+        <button onclick="goToCalculator()">Lanjut ke Kalkulator</button>
+      </div>
+    </section>
 
-        <div id="step2" class="card" style="display:none;">
-            <h2 id="judulKaidah"></h2>
-            <p id="penjelasanKaidah"></p>
-            <button onclick="showCalculator()">Lanjut ke Input</button>
-        </div>
-
-        <div id="step3" class="card" style="display:none;">
-            <h2>Kalkulator Metode Pias</h2>
-            <label for="fungsi">Fungsi f(x):</label>
-            <input type="text" id="fungsi" placeholder="Contoh: x*x+2">
-            <label for="a">Batas a:</label>
-            <input type="number" id="a">
-            <label for="b">Batas b:</label>
-            <input type="number" id="b">
-            <label for="n">Jumlah Pias (n):</label>
-            <input type="number" id="n" value="10">
-            <button onclick="hitung()">Hitung</button>
-            <button onclick="reset()">Reset</button>
-            <div id="hasil"></div>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
+    <section id="page-calculator">
+      <div class="card">
+        <h2>Kalkulator Metode Pias</h2>
+        <p>Masukkan nilai batas dan jumlah segmen:</p>
+        <input type="number" id="a" placeholder="Batas a" />
+        <input type="number" id="b" placeholder="Batas b" />
+        <input type="number" id="n" placeholder="Jumlah segmen n" />
+        <button onclick="hitung()">Hitung</button>
+        <p id="hasil"></p>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <a href="https://github.com/aldiannurrahman" target="_blank">About Me</a>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
