--- a/kalkulator.html
+++ b/kalkulator.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -11,6 +10,7 @@
   <header><h1>Kalkulator Metode Pias</h1></header>
   <main>
     <section class="card">
+      <label>Fungsi f(x): <input id="fx" type="text" placeholder="Contoh: x*x + 2" /></label>
       <label>Batas bawah (a): <input id="a" type="number" /></label>
       <label>Batas atas (b): <input id="b" type="number" /></label>
       <label>Jumlah pias (n): <input id="n" type="number" /></label>
