--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Integrasi Numerik</title>
+  <title>Integrasi Numerik - Metode Pias</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="gradient">
@@ -17,7 +16,20 @@
       <p>Integrasi numerik adalah pendekatan matematis untuk menghitung nilai integral dari suatu fungsi ketika metode analitik tidak dapat digunakan. Salah satu pendekatannya adalah metode pias, yang memecah daerah integral menjadi bagian-bagian kecil (pias) untuk mendekati luas di bawah kurva.</p>
       <a href="pilih_kaidah.html" class="button">Pilih Kaidah</a>
     </section>
+
+    <section class="card">
+      <h2>Masukkan Parameter</h2>
+      <label>Fungsi f(x): <input id="fx" type="text" placeholder="Contoh: x*x + 2" /></label>
+      <label>Batas bawah (a): <input id="a" type="number" /></label>
+      <label>Batas atas (b): <input id="b" type="number" /></label>
+      <label>Jumlah pias (n): <input id="n" type="number" /></label>
+      <button onclick="hitung()">Hitung</button>
+      <button onclick="reset()">Reset</button>
+      <div id="output"></div>
+    </section>
   </main>
-  <footer><a href="tentang_kami.html">Tentang Kami</a></footer>
+  <footer>
+    <a href="tentang_kami.html">Tentang Kami</a>
+  </footer>
 </body>
 </html>
