--- a/kalkulator.html
+++ b/kalkulator.html
@@ -2,11 +2,11 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Kalkulator</title>
+  <title>Kalkulator Metode Pias</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
-<body class="gradient">
+<body>
   <header><h1>Kalkulator Metode Pias</h1></header>
   <main>
     <section class="card">
@@ -19,6 +19,5 @@
       <div id="output"></div>
     </section>
   </main>
-  <footer><a href="pilih_kaidah.html">Kembali</a></footer>
 </body>
 </html>
