--- a/penjelasan_segiempat.html
+++ b/penjelasan_segiempat.html
@@ -1,27 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Kaidah Segiempat</title>
+  <title>Penjelasan Metode Segiempat</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="gradient">
-  <header><h1>Kaidah Segiempat</h1></header>
+<body>
+  <header><h1>Penjelasan Metode Segiempat</h1></header>
   <main>
     <section class="card">
-      <h2>Langkah-langkah:</h2>
+      <h2>Langkah-langkah Metode Segiempat</h2>
       <ol>
-        <li>Tentukan batas bawah (a) dan batas atas (b) dari integral.</li>
-        <li>Bagi interval [a, b] menjadi n bagian sama panjang.</li>
-        <li>Hitung panjang tiap pias: h = (b - a) / n.</li>
-        <li>Hitung f(x) untuk setiap titik ujung kiri segmen.</li>
-        <li>Luas tiap pias = f(x) * h.</li>
-        <li>Jumlahkan semua luas pias sebagai hasil integral aproksimasi.</li>
+        <li>Menentukan batas bawah (a) dan batas atas (b).</li>
+        <li>Membagi interval menjadi n bagian yang sama.</li>
+        <li>Hitung nilai fungsi di titik batas kiri.</li>
+        <li>Hitung luas tiap pias dengan rumus <code>luas = f(x) * h</code>.</li>
+        <li>Jumlahkan luas tiap pias untuk hasil total.</li>
       </ol>
-      <a href="kalkulator.html?metode=segiempat" class="button">Lanjut ke Kalkulator</a>
+      <a href="kalkulator.html">Kembali ke Kalkulator</a>
     </section>
   </main>
-  <footer><a href="pilih_kaidah.html">Kembali</a></footer>
 </body>
 </html>
