--- a/pilih_kaidah.html
+++ b/pilih_kaidah.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -6,16 +5,16 @@
   <title>Pilih Kaidah</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="gradient">
-  <header>
-    <h1>Pilih Kaidah Metode Pias</h1>
-  </header>
+<body>
+  <header><h1>Pilih Metode Kaidah</h1></header>
   <main>
     <section class="card">
-      <a href="penjelasan_segiempat.html" class="button">Kaidah Segiempat</a>
-      <a href="penjelasan_titik_tengah.html" class="button">Kaidah Titik Tengah</a>
+      <h2>Silakan Pilih Metode Kaidah yang akan digunakan</h2>
+      <ul>
+        <li><a href="penjelasan_segiempat.html">Metode Segiempat</a></li>
+        <li><a href="penjelasan_titik_tengah.html">Metode Titik Tengah</a></li>
+      </ul>
     </section>
   </main>
-  <footer><a href="index.html">Kembali</a></footer>
 </body>
 </html>
