--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -10,7 +10,7 @@
   <header><h1>Kelompok 3</h1></header>
   <main>
     <section class="card">
-      <p>Website ini dibuat oleh Kelompok 3 sebagai tugas Interaksi Manusia dan Komputer.</p>
+      <p>Website ini dibuat oleh Kelompok 3 sebagai tugas metode numerik.</p>
       <a href="https://github.com/aldiannurrahman" target="_blank" class="button">Kunjungi GitHub</a>
     </section>
   </main>
