--- a/pilih_kaidah.html
+++ b/pilih_kaidah.html
@@ -5,16 +5,21 @@
   <title>Pilih Kaidah</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <header><h1>Pilih Metode Kaidah</h1></header>
+<body class="gradient">
+  <header>
+    <h1>Pilih Kaidah Integrasi Numerik</h1>
+    <p>Metode Pias - Dibuat oleh Kelompok 3</p>
+  </header>
   <main>
     <section class="card">
-      <h2>Silakan Pilih Metode Kaidah yang akan digunakan</h2>
-      <ul>
-        <li><a href="penjelasan_segiempat.html">Metode Segiempat</a></li>
-        <li><a href="penjelasan_titik_tengah.html">Metode Titik Tengah</a></li>
-      </ul>
+      <h2>Pilih Kaidah untuk Integrasi Numerik</h2>
+      <p>Silahkan pilih salah satu kaidah untuk menghitung integral:</p>
+      <a href="kalkulator.html?metode=segiempat" class="button">Metode Segi Empat</a>
+      <a href="kalkulator.html?metode=titik_tengah" class="button">Metode Titik Tengah</a>
     </section>
   </main>
+  <footer>
+    <a href="tentang_kami.html">Tentang Kami</a>
+  </footer>
 </body>
 </html>
