--- a/kalkulator.html
+++ b/kalkulator.html
@@ -2,14 +2,18 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Kalkulator Metode Pias</title>
+  <title>Kalkulator Integrasi Numerik</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
-<body>
-  <header><h1>Kalkulator Metode Pias</h1></header>
+<body class="gradient">
+  <header>
+    <h1>Kalkulator Metode Pias</h1>
+    <p>Metode Pias - Dibuat oleh Kelompok 3</p>
+  </header>
   <main>
     <section class="card">
+      <h2>Masukkan Parameter untuk Integrasi</h2>
       <label>Fungsi f(x): <input id="fx" type="text" placeholder="Contoh: x*x + 2" /></label>
       <label>Batas bawah (a): <input id="a" type="number" /></label>
       <label>Batas atas (b): <input id="b" type="number" /></label>
@@ -19,5 +23,62 @@
       <div id="output"></div>
     </section>
   </main>
+  <footer>
+    <a href="pilih_kaidah.html">Pilih Kaidah</a>
+  </footer>
+
+  <script>
+    // Ambil metode yang dipilih dari URL query parameter
+    const params = new URLSearchParams(window.location.search);
+    const metode = params.get('metode');
+    
+    // Tentukan nama metode di header
+    const metodeName = metode === 'segiempat' ? 'Metode Segi Empat' : 'Metode Titik Tengah';
+    document.querySelector('header h1').innerText = `Kalkulator - ${metodeName}`;
+
+    function hitung() {
+      const fxInput = document.getElementById('fx').value.trim();
+      const a = parseFloat(document.getElementById('a').value);
+      const b = parseFloat(document.getElementById('b').value);
+      const n = parseInt(document.getElementById('n').value);
+
+      if (!fxInput || isNaN(a) || isNaN(b) || isNaN(n) || n <= 0) {
+        document.getElementById('output').innerText = "Input tidak valid!";
+        return;
+      }
+
+      let f;
+      try {
+        f = new Function("x", "return " + fxInput);
+        f(1); // Test the function
+      } catch (err) {
+        document.getElementById('output').innerText = "Fungsi f(x) tidak valid!";
+        return;
+      }
+
+      const h = (b - a) / n;
+      let table = "<table border='1'><tr><th>i</th><th>xi</th><th>f(xi)</th><th>Luas</th></tr>";
+      let total = 0;
+
+      for (let i = 0; i < n; i++) {
+        let xi = (metode === 'segiempat') ? a + i * h : a + (i + 0.5) * h;
+        let fx = f(xi);
+        let luas = fx * h;
+        total += luas;
+        table += `<tr><td>${i + 1}</td><td>${xi.toFixed(4)}</td><td>${fx.toFixed(4)}</td><td>${luas.toFixed(4)}</td></tr>`;
+      }
+
+      table += `<tr><td colspan="3"><b>Total</b></td><td><b>${total.toFixed(4)}</b></td></tr></table>`;
+      document.getElementById('output').innerHTML = table;
+    }
+
+    function reset() {
+      document.getElementById('fx').value = "";
+      document.getElementById('a').value = "";
+      document.getElementById('b').value = "";
+      document.getElementById('n').value = "";
+      document.getElementById('output').innerHTML = "";
+    }
+  </script>
 </body>
 </html>
