--- a/kalkulator.html
+++ b/kalkulator.html
@@ -2,38 +2,58 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Kalkulator Integrasi</title>
+  <title>Kalkulator Integrasi Numerik</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
 <body class="gradient">
   <header>
-    <h1 id="judul">Kalkulator Integrasi</h1>
+    <h1>Kalkulator Integrasi Numerik</h1>
   </header>
   <main>
     <section class="card">
-      <h2 id="subjudul"></h2>
-      <label>Fungsi f(x): <input id="fx" type="text" placeholder="x*x + 2" /></label>
-      <label>Batas bawah (a): <input id="a" type="number" /></label>
-      <label>Batas atas (b): <input id="b" type="number" /></label>
-      <label>Jumlah pias (n): <input id="n" type="number" /></label>
-      <button onclick="hitung()">Hitung</button>
-      <button onclick="reset()">Reset</button>
+      <!-- Subjudul akan di-inject oleh script.js -->
+      <h2 id="subjudul">Menggunakan Metode Segi Empat</h2>
+
+      <label>
+        Fungsi f(x):  
+        <input id="fx" type="text" placeholder="Contoh: x*x + 2" />
+      </label>
+
+      <label>
+        Batas bawah (a):  
+        <input id="a" type="number" />
+      </label>
+
+      <label>
+        Batas atas (b):  
+        <input id="b" type="number" />
+      </label>
+
+      <label>
+        Jumlah pias (n):  
+        <input id="n" type="number" />
+      </label>
+
+      <label>
+        Metode:  
+        <select id="metode">
+          <option value="segiempat">Segi Empat</option>
+          <option value="titik_tengah">Titik Tengah</option>
+        </select>
+      </label>
+
+      <!-- Tombol sekarang pakai event listener, bukan onclick -->
+      <button id="hitungBtn">Hitung</button>
+      <button id="resetBtn">Reset</button>
+
       <div id="output"></div>
+
       <a href="pilih_kaidah.html" class="button">Pilih Ulang Kaidah</a>
     </section>
   </main>
-  <footer><a href="index.html">Beranda</a></footer>
-
-  <script>
-    // Tampilkan judul sesuai metode
-    const params = new URLSearchParams(window.location.search);
-    const metode = params.get('metode') || 'segiempat';
-    const titles = {
-      segiempat: 'Menggunakan Metode Segi Empat',
-      titik_tengah: 'Menggunakan Metode Titik Tengah'
-    };
-    document.getElementById('subjudul').innerText = titles[metode];
-  </script>
+  <footer>
+    <a href="index.html">Beranda</a>
+  </footer>
 </body>
 </html>
