--- a/kalkulator.html
+++ b/kalkulator.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>Kalkulator Integrasi Numerik</title>
   <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
 </head>
 <body class="gradient">
   <header>
@@ -12,38 +11,36 @@
   </header>
   <main>
     <section class="card">
-      <!-- Subjudul akan di-inject oleh script.js -->
       <h2 id="subjudul">Menggunakan Metode Segi Empat</h2>
 
       <label>
-        Fungsi f(x):  
+        Fungsi f(x):
         <input id="fx" type="text" placeholder="Contoh: x*x + 2" />
       </label>
 
       <label>
-        Batas bawah (a):  
+        Batas bawah (a):
         <input id="a" type="number" />
       </label>
 
       <label>
-        Batas atas (b):  
+        Batas atas (b):
         <input id="b" type="number" />
       </label>
 
       <label>
-        Jumlah pias (n):  
+        Jumlah pias (n):
         <input id="n" type="number" />
       </label>
 
       <label>
-        Metode:  
+        Metode:
         <select id="metode">
           <option value="segiempat">Segi Empat</option>
           <option value="titik_tengah">Titik Tengah</option>
         </select>
       </label>
 
-      <!-- Tombol sekarang pakai event listener, bukan onclick -->
       <button id="hitungBtn">Hitung</button>
       <button id="resetBtn">Reset</button>
 
@@ -55,5 +52,8 @@
   <footer>
     <a href="index.html">Beranda</a>
   </footer>
+
+  <!-- Script di-load di akhir supaya semua elemen sudah ada -->
+  <script src="script.js"></script>
 </body>
 </html>
