--- a/pilih_kaidah.html
+++ b/pilih_kaidah.html
@@ -2,34 +2,97 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Pilih Kaidah</title>
+  <title>Pilih Kaidah Integrasi</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="gradient">
   <header>
     <h1>Pilih Kaidah Integrasi</h1>
+    <p>Metode Pias – Dibuat oleh Kelompok 3</p>
   </header>
   <main>
+    <!-- Metode Segi Empat -->
     <section class="card">
-      <h2>Metode Segi Empat</h2>
-      <ol>
-        <li>Hitung lebar pias: <code>h = (b - a) / n</code></li>
-        <li>Gunakan titik kiri tiap pias: <code>x_i = a + i·h</code></li>
-        <li>Jumlahkan <code>f(x_i)·h</code> untuk i=0…n-1</li>
-      </ol>
-      <a href="kalkulator.html?metode=segiempat" class="button">Ke Kalkulator Segi Empat</a>
+      <details>
+        <summary><h2>Metode Segi Empat</h2></summary>
+        <p>
+          Metode Segi Empat, atau Left Rectangle Rule, mendekati integral
+          dengan memecah area di bawah kurva jadi rectangle‐rectangle kecil
+          (pias), lalu menggunakan tinggi fungsi pada **titik kiri** setiap
+          rectangle.
+        </p>
+        <h3>Rumus</h3>
+        <pre>
+I ≈ h · ∑₍ᵢ₌₀₎ⁿ⁻¹ f(a + i·h)
+dengan h = (b − a)/n
+        </pre>
+        <h3>Langkah</h3>
+        <ol>
+          <li>Tentukan a, b, dan n.</li>
+          <li>Hitung h = (b − a)/n.</li>
+          <li>Untuk i = 0…n−1:  
+            xi = a + i·h → luasᵢ = f(xi)·h
+          </li>
+          <li>Jumlahkan semua luasᵢ.</li>
+        </ol>
+        <h3>Contoh</h3>
+        <table>
+          <thead><tr><th>i</th><th>xi</th><th>f(xi)</th><th>luasᵢ</th></tr></thead>
+          <tbody>
+            <tr><td>1</td><td>1.0000</td><td>3.0000</td><td>1.5000</td></tr>
+            <tr><td>2</td><td>1.5000</td><td>4.2500</td><td>2.1250</td></tr>
+            <tr><td>3</td><td>2.0000</td><td>6.0000</td><td>3.0000</td></tr>
+            <tr><td>4</td><td>2.5000</td><td>8.2500</td><td>4.1250</td></tr>
+          </tbody>
+          <tfoot>
+            <tr><td colspan="3"><strong>Total</strong></td><td>10.7500</td></tr>
+          </tfoot>
+        </table>
+        <a href="kalkulator.html?metode=segiempat" class="button">Ke Kalkulator Segi Empat</a>
+      </details>
     </section>
 
+    <!-- Metode Titik Tengah -->
     <section class="card">
-      <h2>Metode Titik Tengah</h2>
-      <ol>
-        <li>Hitung lebar pias: <code>h = (b - a) / n</code></li>
-        <li>Pakai titik tengah: <code>x_i = a + (i+½)·h</code></li>
-        <li>Jumlahkan <code>f(x_i)·h</code> untuk i=0…n-1</li>
-      </ol>
-      <a href="kalkulator.html?metode=titik_tengah" class="button">Ke Kalkulator Titik Tengah</a>
+      <details>
+        <summary><h2>Metode Titik Tengah</h2></summary>
+        <p>
+          Metode Titik Tengah (Midpoint Rule) membagi area jadi rectangle kecil,
+          tapi memakai **titik tengah** tiap interval untuk menghitung tinggi
+          fungsi—biasanya lebih akurat.
+        </p>
+        <h3>Rumus</h3>
+        <pre>
+I ≈ h · ∑₍ᵢ₌₀₎ⁿ⁻¹ f(a + (i + ½)·h)
+dengan h = (b − a)/n
+        </pre>
+        <h3>Langkah</h3>
+        <ol>
+          <li>Tentukan a, b, dan n.</li>
+          <li>Hitung h = (b − a)/n.</li>
+          <li>Untuk i = 0…n−1:  
+            xi = a + (i + ½)·h → luasᵢ = f(xi)·h
+          </li>
+          <li>Jumlahkan semua luasᵢ.</li>
+        </ol>
+        <h3>Contoh</h3>
+        <table>
+          <thead><tr><th>i</th><th>xi</th><th>f(xi)</th><th>luasᵢ</th></tr></thead>
+          <tbody>
+            <tr><td>1</td><td>1.2500</td><td>3.5625</td><td>1.7813</td></tr>
+            <tr><td>2</td><td>1.7500</td><td>5.0625</td><td>2.5313</td></tr>
+            <tr><td>3</td><td>2.2500</td><td>7.0625</td><td>3.5313</td></tr>
+            <tr><td>4</td><td>2.7500</td><td>9.5625</td><td>4.7813</td></tr>
+          </tbody>
+          <tfoot>
+            <tr><td colspan="3"><strong>Total</strong></td><td>12.6250</td></tr>
+          </tfoot>
+        </table>
+        <a href="kalkulator.html?metode=titik_tengah" class="button">Ke Kalkulator Titik Tengah</a>
+      </details>
     </section>
   </main>
-  <footer><a href="index.html">Kembali ke Beranda</a></footer>
+
+  <footer><a href="index.html">Beranda</a></footer>
 </body>
 </html>
