--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -10,8 +10,13 @@
   <header><h1>Kelompok 3</h1></header>
   <main>
     <section class="card">
-      <p>Website ini dibuat oleh Kelompok 3 sebagai tugas metode numerik.</p>
-      <a href="https://github.com/aldiannurrahman" target="_blank" class="button">Kunjungi GitHub</a>
+      <p>Website ini dibuat oleh Kelompok 3 sebagai Tugas Metode Numerik.</p>
+      <h2>Anggota:</h2>
+      <ul>
+        <li>M. Aldian Nurrahman</li>
+        <li>M. Fazri Riyadhi</li>
+      </ul>
+      <a href="https://github.com/aldiannurrahman" target="_blank" class="button">Kunjungi GitHub Aldian</a>
     </section>
   </main>
   <footer><a href="index.html">Kembali ke Beranda</a></footer>
