--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -13,8 +13,8 @@
       <p>Website ini dibuat oleh Kelompok 3 sebagai Tugas Metode Numerik.</p>
       <h2>Anggota:</h2>
       <ul>
-        <li>M. Aldian Nurrahman</li>
-        <li>M. Fazri Riyadhi</li>
+        <li>M. Aldian Nurrahman(2303010139) </li>
+        <li>M. Fazri Riyadi(2303010124)</li>
       </ul>
       <a href="https://github.com/aldiannurrahman" target="_blank" class="button">Kunjungi GitHub Aldian</a>
     </section>
