--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="gradient">
+  <nav>
+    <ul>
+      <li><a href="index.html" class="active">Beranda</a></li>
+      <li><a href="pilih_kaidah.html">Pilih Kaidah</a></li>
+      <li><a href="tentang_kami.html">Tentang Kami</a></li>
+    </ul>
+  </nav>
   <header>
     <h1>Integrasi Numerik</h1>
     <p>Metode Pias - Dibuat oleh Kelompok 3</p>
@@ -17,6 +24,5 @@
       <a href="pilih_kaidah.html" class="button">Pilih Kaidah</a>
     </section>
   </main>
-  <footer><a href="tentang_kami.html">Tentang Kami</a></footer>
 </body>
 </html>
