--- a/kalkulator.html
+++ b/kalkulator.html
@@ -6,35 +6,23 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="gradient">
-  <header>
-    <h1>Kalkulator Integrasi Numerik</h1>
-  </header>
+  <nav>
+    <ul>
+      <li><a href="index.html">Beranda</a></li>
+      <li><a href="pilih_kaidah.html">Pilih Kaidah</a></li>
+      <li><a href="tentang_kami.html">Tentang Kami</a></li>
+    </ul>
+  </nav>
+  <header><h1>Kalkulator Integrasi Numerik</h1></header>
   <main>
     <section class="card">
-      <h2 id="subjudul">Menggunakan Metode Segi Empat</h2>
+      <h2 id="subjudul">Menggunakan Metode</h2>
 
-      <label>
-        Fungsi f(x):
-        <input id="fx" type="text" placeholder="Contoh: x*x + 2" />
-      </label>
-
-      <label>
-        Batas bawah (a):
-        <input id="a" type="number" />
-      </label>
-
-      <label>
-        Batas atas (b):
-        <input id="b" type="number" />
-      </label>
-
-      <label>
-        Jumlah pias (n):
-        <input id="n" type="number" />
-      </label>
-
-      <label>
-        Metode:
+      <label>Fungsi f(x):<input id="fx" type="text" placeholder="Contoh: x*x + 2" /></label>
+      <label>Batas bawah (a):<input id="a" type="number" /></label>
+      <label>Batas atas (b):<input id="b" type="number" /></label>
+      <label>Jumlah pias (n):<input id="n" type="number" /></label>
+      <label>Metode:
         <select id="metode">
           <option value="segiempat">Segi Empat</option>
           <option value="titik_tengah">Titik Tengah</option>
@@ -45,15 +33,8 @@
       <button id="resetBtn">Reset</button>
 
       <div id="output"></div>
-
-      <a href="pilih_kaidah.html" class="button">Pilih Ulang Kaidah</a>
     </section>
   </main>
-  <footer>
-    <a href="index.html">Beranda</a>
-  </footer>
-
-  <!-- Script di-load di akhir supaya semua elemen sudah ada -->
   <script src="script.js"></script>
 </body>
 </html>
