--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -7,18 +6,24 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="gradient">
+  <nav>
+    <ul>
+      <li><a href="index.html">Beranda</a></li>
+      <li><a href="pilih_kaidah.html">Pilih Kaidah</a></li>
+      <li><a href="tentang_kami.html" class="active">Tentang Kami</a></li>
+    </ul>
+  </nav>
   <header><h1>Kelompok 3</h1></header>
   <main>
     <section class="card">
       <p>Website ini dibuat oleh Kelompok 3 sebagai Tugas Metode Numerik.</p>
       <h2>Anggota:</h2>
       <ul>
-        <li>M. Aldian Nurrahman(2303010139) </li>
-        <li>M. Fazri Riyadi(2303010124)</li>
+        <li>M. Aldian Nurrahman (2303010139)</li>
+        <li>M. Fazri Riyadi (2303010124)</li>
       </ul>
-      <a href="https://github.com/aldiannurrahman" target="_blank" class="button">Kunjungi GitHub Aldian</a>
+      <a href="https://github.com/aldiannurrahman" target="_blank" class="button">GitHub Aldian</a>
     </section>
   </main>
-  <footer><a href="index.html">Kembali ke Beranda</a></footer>
 </body>
 </html>
