--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Integrasi Numerik</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Numerik Kalkulator 🔢</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="gradient">
-  <nav>
+<body>
+  <nav class="taskbar">
+    <h1>NumerikCalc</h1>
     <ul>
-      <li><a href="index.html" class="active">Beranda</a></li>
-      <li><a href="pilih_kaidah.html">Pilih Kaidah</a></li>
-      <li><a href="tentang_kami.html">Tentang Kami</a></li>
+      <li><a href="index.html">🏠 Beranda</a></li>
+      <li><a href="kaidah.html">🧠 Pilih Kaidah</a></li>
+      <li><a href="tentang.html">👥 Tentang Kami</a></li>
     </ul>
   </nav>
-  <header>
-    <h1>Integrasi Numerik</h1>
-    <p>Metode Pias - Dibuat oleh Kelompok 3</p>
-  </header>
+
   <main>
     <section class="card">
-      <h2>Apa itu Integrasi Numerik?</h2>
-      <p>Integrasi numerik pakai metode Pias itu cara menghitung luas di bawah kurva kalau integrasi biasa susah. Kita pilah ke pias-pias kecil.</p>
-      <a href="pilih_kaidah.html" class="button">Pilih Kaidah</a>
+      <h2>Selamat datang! 🎉</h2>
+      <p>Ini adalah kalkulator metode numerik untuk menghitung integral tak tentu maupun tentu menggunakan metode <strong>Segi Empat</strong> dan <strong>Titik Tengah</strong>.</p>
+      <p>Klik "Pilih Kaidah" untuk mulai menggunakan kalkulator.</p>
+      <a href="kaidah.html" class="button">➡️ Mulai Sekarang</a>
     </section>
   </main>
 </body>
