--- a/pilih_kaidah.html
+++ b/pilih_kaidah.html
@@ -6,45 +6,84 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="gradient">
-  <nav>
-    <ul>
-      <li><a href="index.html">Beranda</a></li>
-      <li><a href="pilih_kaidah.html" class="active">Pilih Kaidah</a></li>
-      <li><a href="tentang_kami.html">Tentang Kami</a></li>
-    </ul>
-  </nav>
   <header>
     <h1>Pilih Kaidah Integrasi</h1>
     <p>Metode Pias – Dibuat oleh Kelompok 3</p>
   </header>
   <main>
-    <!-- Segiempat -->
+    <!-- Metode Segi Empat -->
     <section class="card">
-      <h2>Metode Segi Empat</h2>
-      <p>Langkah-langkah:</p>
-      <ol>
-        <li>Menentukan batas bawah (a) dan atas (b).</li>
-        <li>Membagi interval jadi n bagian.</li>
-        <li>Hitung nilai fungsi di titik kiri.</li>
-        <li>Hitung luas: <code>f(x) * h</code></li>
-        <li>Jumlahkan semua luas.</li>
-      </ol>
-      <a href="kalkulator.html?metode=segiempat" class="button">Gunakan Metode Ini</a>
+      <details>
+        <summary><h2>📐 Metode Segi Empat (Left Rectangle Rule)</h2></summary>
+        <p>
+          🧠 Metode ini mendekati nilai integral dengan cara membagi area di bawah kurva jadi beberapa pias (rectangles), lalu menghitung tinggi fungsi di **ujung kiri** tiap pias. Biasanya dipakai buat pendekatan kasar, tapi cepat.
+        </p>
+        <h3>Rumus Umum:</h3>
+        <pre>
+I ≈ h × Σ f(a + i·h),  untuk i = 0 sampai n−1
+        </pre>
+        <h3>Langkah-langkah 🔍:</h3>
+        <ol>
+          <li>Tentukan batas bawah (a), batas atas (b), dan jumlah pias (n).</li>
+          <li>Hitung lebar pias dengan rumus h = (b − a)/n.</li>
+          <li>Untuk setiap i, hitung titik kiri: xi = a + i·h.</li>
+          <li>Hitung luas tiap pias dengan rumus luasᵢ = f(xi)·h.</li>
+          <li>Jumlahkan semua luas untuk mendapatkan hasil total integral.</li>
+        </ol>
+        <h3>Contoh 📊:</h3>
+        <table>
+          <thead><tr><th>i</th><th>xi</th><th>f(xi)</th><th>Luas</th></tr></thead>
+          <tbody>
+            <tr><td>1</td><td>1.0000</td><td>3.0000</td><td>1.5000</td></tr>
+            <tr><td>2</td><td>1.5000</td><td>4.2500</td><td>2.1250</td></tr>
+            <tr><td>3</td><td>2.0000</td><td>6.0000</td><td>3.0000</td></tr>
+            <tr><td>4</td><td>2.5000</td><td>8.2500</td><td>4.1250</td></tr>
+          </tbody>
+          <tfoot>
+            <tr><td colspan="3"><strong>Total</strong></td><td>10.7500</td></tr>
+          </tfoot>
+        </table>
+        <a href="kalkulator.html?metode=segiempat" class="button">Ke Kalkulator Segi Empat</a>
+      </details>
     </section>
 
-    <!-- Titik Tengah -->
+    <!-- Metode Titik Tengah -->
     <section class="card">
-      <h2>Metode Titik Tengah</h2>
-      <p>Langkah-langkah:</p>
-      <ol>
-        <li>Menentukan batas bawah (a) dan atas (b).</li>
-        <li>Membagi interval jadi n bagian.</li>
-        <li>Hitung nilai fungsi di titik tengah.</li>
-        <li>Hitung luas: <code>f(x_tengah) * h</code></li>
-        <li>Jumlahkan semua luas.</li>
-      </ol>
-      <a href="kalkulator.html?metode=titik_tengah" class="button">Gunakan Metode Ini</a>
+      <details>
+        <summary><h2>🌍 Metode Titik Tengah (Midpoint Rule)</h2></summary>
+        <p>
+          📏 Metode ini juga membagi area menjadi pias kecil, tapi menghitung tinggi fungsi di **titik tengah** tiap interval, yang biasanya memberikan hasil lebih akurat dibandingkan metode Segi Empat.
+        </p>
+        <h3>Rumus Umum:</h3>
+        <pre>
+I ≈ h × Σ f(a + (i + ½)·h), untuk i = 0 sampai n−1
+        </pre>
+        <h3>Langkah-langkah 🔍:</h3>
+        <ol>
+          <li>Tentukan batas bawah (a), batas atas (b), dan jumlah pias (n).</li>
+          <li>Hitung lebar pias dengan rumus h = (b − a)/n.</li>
+          <li>Untuk setiap i, hitung titik tengah: xi = a + (i + ½)·h.</li>
+          <li>Hitung luas tiap pias dengan rumus luasᵢ = f(xi)·h.</li>
+          <li>Jumlahkan semua luas untuk mendapatkan hasil total integral.</li>
+        </ol>
+        <h3>Contoh 📊:</h3>
+        <table>
+          <thead><tr><th>i</th><th>xi</th><th>f(xi)</th><th>Luas</th></tr></thead>
+          <tbody>
+            <tr><td>1</td><td>1.2500</td><td>3.5625</td><td>1.7813</td></tr>
+            <tr><td>2</td><td>1.7500</td><td>5.0625</td><td>2.5313</td></tr>
+            <tr><td>3</td><td>2.2500</td><td>7.0625</td><td>3.5313</td></tr>
+            <tr><td>4</td><td>2.7500</td><td>9.5625</td><td>4.7813</td></tr>
+          </tbody>
+          <tfoot>
+            <tr><td colspan="3"><strong>Total</strong></td><td>12.6250</td></tr>
+          </tfoot>
+        </table>
+        <a href="kalkulator.html?metode=titik_tengah" class="button">Ke Kalkulator Titik Tengah</a>
+      </details>
     </section>
   </main>
+
+  <footer><a href="index.html">Beranda</a></footer>
 </body>
 </html>
