--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>NumerikCalc</h1>
     <ul>
       <li><a href="index.html">🏠 Beranda</a></li>
-      <li><a href="kaidah.html">🧠 Pilih Kaidah</a></li>
-      <li><a href="tentang.html">👥 Tentang Kami</a></li>
+      <li><a href="pilih_kaidah.html">🧠 Pilih Kaidah</a></li>
+      <li><a href="tentang_kami.html">👥 Tentang Kami</a></li>
     </ul>
   </nav>
 
