--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h2>Selamat datang! 🎉</h2>
       <p>Ini adalah kalkulator metode numerik untuk menghitung integral tak tentu maupun tentu menggunakan metode <strong>Segi Empat</strong> dan <strong>Titik Tengah</strong>.</p>
       <p>Klik "Pilih Kaidah" untuk mulai menggunakan kalkulator.</p>
-      <a href="kaidah.html" class="button">➡️ Mulai Sekarang</a>
+      <a href="pilih_kaidah.html" class="button">➡️ Mulai Sekarang</a>
     </section>
   </main>
 </body>
