--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Taskbar atau Navbar Global -->
   <nav class="taskbar">
     <h1>NumerikCalc</h1>
     <ul>
@@ -19,10 +20,15 @@
   <main>
     <section class="card">
       <h2>Selamat datang! 🎉</h2>
-      <p>Ini adalah kalkulator metode numerik untuk menghitung integral tak tentu maupun tentu menggunakan metode <strong>Segi Empat</strong> dan <strong>Titik Tengah</strong>.</p>
+      <p>Ini adalah kalkulator metode numerik untuk menghitung integral tak tentu maupun tentu menggunakan metode pias <strong>Segi Empat</strong> dan <strong>Titik Tengah</strong>.</p>
       <p>Klik "Pilih Kaidah" untuk mulai menggunakan kalkulator.</p>
       <a href="pilih_kaidah.html" class="button">➡️ Mulai Sekarang</a>
     </section>
   </main>
+
+  <!-- Footer atau bagian bawah halaman -->
+  <footer>
+    <p>&copy; 2025 NumerikCalc. Semua hak dilindungi.</p>
+  </footer>
 </body>
 </html>
