--- a/kalkulator.html
+++ b/kalkulator.html
@@ -35,6 +35,6 @@
 
   <footer><a href="index.html">Beranda</a></footer>
   
-  <script src="kalkulator.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
