--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Footer atau bagian bawah halaman -->
   <footer>
-    <p>&copy; 2025 NumerikCalc. Semua hak dilindungi.</p>
+    <p>&copy; 2025 Integrasi Numerik Metode Pias . Kelompok 4.</p>
   </footer>
 </body>
 </html>
