--- a/pilih_kaidah.html
+++ b/pilih_kaidah.html
@@ -2,88 +2,41 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Pilih Kaidah Integrasi</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pilih Kaidah 🔢</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body class="gradient">
-  <header>
-    <h1>Pilih Kaidah Integrasi</h1>
-    <p>Metode Pias – Dibuat oleh Kelompok 3</p>
-  </header>
-  <main>
-    <!-- Metode Segi Empat -->
-    <section class="card">
-      <details>
-        <summary><h2>📐 Metode Segi Empat (Left Rectangle Rule)</h2></summary>
-        <p>
-          🧠 Metode ini mendekati nilai integral dengan cara membagi area di bawah kurva jadi beberapa pias (rectangles), lalu menghitung tinggi fungsi di **ujung kiri** tiap pias. Biasanya dipakai buat pendekatan kasar, tapi cepat.
-        </p>
-        <h3>Rumus Umum:</h3>
-        <pre>
-I ≈ h × Σ f(a + i·h),  untuk i = 0 sampai n−1
-        </pre>
-        <h3>Langkah-langkah 🔍:</h3>
-        <ol>
-          <li>Tentukan batas bawah (a), batas atas (b), dan jumlah pias (n).</li>
-          <li>Hitung lebar pias dengan rumus h = (b − a)/n.</li>
-          <li>Untuk setiap i, hitung titik kiri: xi = a + i·h.</li>
-          <li>Hitung luas tiap pias dengan rumus luasᵢ = f(xi)·h.</li>
-          <li>Jumlahkan semua luas untuk mendapatkan hasil total integral.</li>
-        </ol>
-        <h3>Contoh 📊:</h3>
-        <table>
-          <thead><tr><th>i</th><th>xi</th><th>f(xi)</th><th>Luas</th></tr></thead>
-          <tbody>
-            <tr><td>1</td><td>1.0000</td><td>3.0000</td><td>1.5000</td></tr>
-            <tr><td>2</td><td>1.5000</td><td>4.2500</td><td>2.1250</td></tr>
-            <tr><td>3</td><td>2.0000</td><td>6.0000</td><td>3.0000</td></tr>
-            <tr><td>4</td><td>2.5000</td><td>8.2500</td><td>4.1250</td></tr>
-          </tbody>
-          <tfoot>
-            <tr><td colspan="3"><strong>Total</strong></td><td>10.7500</td></tr>
-          </tfoot>
-        </table>
-        <a href="kalkulator.html?metode=segiempat" class="button">Ke Kalkulator Segi Empat</a>
-      </details>
-    </section>
+<body>
+  <!-- Taskbar -->
+  <nav class="taskbar">
+    <h1>NumerikCalc</h1>
+    <ul>
+      <li><a href="index.html">🏠 Beranda</a></li>
+      <li><a href="pilih_kaidah.html">🧠 Pilih Kaidah</a></li>
+      <li><a href="tentang_kami.html">👥 Tentang Kami</a></li>
+    </ul>
+  </nav>
 
-    <!-- Metode Titik Tengah -->
+  <main>
     <section class="card">
-      <details>
-        <summary><h2>🌍 Metode Titik Tengah (Midpoint Rule)</h2></summary>
-        <p>
-          📏 Metode ini juga membagi area menjadi pias kecil, tapi menghitung tinggi fungsi di **titik tengah** tiap interval, yang biasanya memberikan hasil lebih akurat dibandingkan metode Segi Empat.
-        </p>
-        <h3>Rumus Umum:</h3>
-        <pre>
-I ≈ h × Σ f(a + (i + ½)·h), untuk i = 0 sampai n−1
-        </pre>
-        <h3>Langkah-langkah 🔍:</h3>
-        <ol>
-          <li>Tentukan batas bawah (a), batas atas (b), dan jumlah pias (n).</li>
-          <li>Hitung lebar pias dengan rumus h = (b − a)/n.</li>
-          <li>Untuk setiap i, hitung titik tengah: xi = a + (i + ½)·h.</li>
-          <li>Hitung luas tiap pias dengan rumus luasᵢ = f(xi)·h.</li>
-          <li>Jumlahkan semua luas untuk mendapatkan hasil total integral.</li>
-        </ol>
-        <h3>Contoh 📊:</h3>
-        <table>
-          <thead><tr><th>i</th><th>xi</th><th>f(xi)</th><th>Luas</th></tr></thead>
-          <tbody>
-            <tr><td>1</td><td>1.2500</td><td>3.5625</td><td>1.7813</td></tr>
-            <tr><td>2</td><td>1.7500</td><td>5.0625</td><td>2.5313</td></tr>
-            <tr><td>3</td><td>2.2500</td><td>7.0625</td><td>3.5313</td></tr>
-            <tr><td>4</td><td>2.7500</td><td>9.5625</td><td>4.7813</td></tr>
-          </tbody>
-          <tfoot>
-            <tr><td colspan="3"><strong>Total</strong></td><td>12.6250</td></tr>
-          </tfoot>
-        </table>
-        <a href="kalkulator.html?metode=titik_tengah" class="button">Ke Kalkulator Titik Tengah</a>
-      </details>
+      <h2>Pilih Metode Integrasi</h2>
+      <p>Pilih metode untuk menghitung integral:</p>
+      <form id="kaidahForm">
+        <label for="metode">Pilih Metode:</label>
+        <select id="metode">
+          <option value="segiempat">Metode Segi Empat</option>
+          <option value="titik_tengah">Metode Titik Tengah</option>
+        </select>
+        <button type="button" id="startBtn" class="button" onclick="startKalkulator()">➡️ Mulai Kalkulasi</button>
+      </form>
     </section>
   </main>
 
-  <footer><a href="index.html">Beranda</a></footer>
+  <script>
+    function startKalkulator() {
+      const metode = document.getElementById('metode').value;
+      window.location.href = `kalkulator.html?metode=${metode}`;
+    }
+  </script>
 </body>
 </html>
