--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Numerik Kalkulator 🔢</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <!-- Taskbar atau Navbar Global -->
+<body class="gradient">
+  <!-- Taskbar -->
   <nav class="taskbar">
     <h1>NumerikCalc</h1>
     <ul>
@@ -20,15 +20,14 @@
   <main>
     <section class="card">
       <h2>Selamat datang! 🎉</h2>
-      <p>Ini adalah kalkulator metode numerik untuk menghitung integral tak tentu maupun tentu menggunakan metode pias <strong>Segi Empat</strong> dan <strong>Titik Tengah</strong>.</p>
+      <p>Ini adalah kalkulator metode numerik untuk menghitung integral tak tentu maupun tentu menggunakan metode <strong>Segi Empat</strong> dan <strong>Titik Tengah</strong>.</p>
       <p>Klik "Pilih Kaidah" untuk mulai menggunakan kalkulator.</p>
       <a href="pilih_kaidah.html" class="button">➡️ Mulai Sekarang</a>
     </section>
   </main>
 
-  <!-- Footer atau bagian bawah halaman -->
   <footer>
-    <p>&copy; 2025 Integrasi Numerik Metode Pias . Kelompok 3.</p>
+    <a href="index.html">🏠 Beranda</a>
   </footer>
 </body>
 </html>
