--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -2,12 +2,10 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tentang Kami 👥</title>
+  <title>Tentang Kami</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Taskbar -->
   <nav class="taskbar">
     <h1>NumerikCalc</h1>
     <ul>
@@ -16,17 +14,15 @@
       <li><a href="tentang_kami.html">👥 Tentang Kami</a></li>
     </ul>
   </nav>
-
   <main>
     <section class="card">
-      <h2>Kelompok 3 👥</h2>
-      <p>Website ini dibuat oleh Kelompok 3 sebagai Tugas Metode Numerik.</p>
-      <h3>Anggota:</h3>
+      <h2>👥 Tentang Kami</h2>
+      <p>Website ini dibuat oleh Kelompok 3 sebagai tugas Metode Numerik.</p>
       <ul>
         <li>M. Aldian Nurrahman (2303010139)</li>
         <li>M. Fazri Riyadi (2303010124)</li>
       </ul>
-      <a href="https://github.com/aldiannurrahman" target="_blank" class="button">Kunjungi GitHub Aldian</a>
+      <a href="https://github.com/aldiannurrahman" target="_blank" class="button">🌐 GitHub Aldian</a>
     </section>
   </main>
 </body>
