--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -2,27 +2,28 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tentang Kami</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <nav class="taskbar">
-    <h1>NumerikCalc</h1>
+    <h1>🔢 NumerikCalc</h1>
     <ul>
       <li><a href="index.html">🏠 Beranda</a></li>
       <li><a href="pilih_kaidah.html">🧠 Pilih Kaidah</a></li>
       <li><a href="tentang_kami.html">👥 Tentang Kami</a></li>
     </ul>
   </nav>
+
   <main>
     <section class="card">
-      <h2>👥 Tentang Kami</h2>
-      <p>Website ini dibuat oleh Kelompok 3 sebagai tugas Metode Numerik.</p>
+      <h2>👥 Tim Pengembang</h2>
+      <p>Website ini dikembangkan oleh Kelompok 3 sebagai tugas Metode Numerik.</p>
       <ul>
         <li>M. Aldian Nurrahman (2303010139)</li>
         <li>M. Fazri Riyadi (2303010124)</li>
       </ul>
-      <a href="https://github.com/aldiannurrahman" target="_blank" class="button">🌐 GitHub Aldian</a>
     </section>
   </main>
 </body>
