--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Beranda - NumerikCalc</title>
+  <title>Beranda - Kalkulator Numerik</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -19,7 +19,7 @@
   <main>
     <section class="intro-card">
       <h2>🔢 Kalkulator Numerik</h2>
-      <p>Selamat datang di NumerikCalc, kalkulator online untuk menghitung integral numerik menggunakan metode yang sudah terbukti!</p>
+      <p>Selamat datang di Kalkulator Numerik, kalkulator online untuk menghitung integral numerik menggunakan metode yang sudah terbukti!</p>
       <p>Kami menyediakan berbagai metode untuk menghitung integral, seperti <strong>Metode Segi Empat</strong> dan <strong>Metode Titik Tengah</strong>. Pilih salah satu metode yang sesuai dengan kebutuhanmu, dan coba hitung hasil integrasi dari fungsi yang kamu inginkan.</p>
       <a href="pilih_kaidah.html" class="button">🧠 Pilih Kaidah Metode</a>
     </section>
