--- a/tentang_kami.html
+++ b/tentang_kami.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="taskbar">
-    <h1>🔢 NumerikCalc</h1>
+    <h1>🔢Kalkultor Metode numerik - Kelompok 3</h1>
     <ul>
       <li><a href="index.html">🏠 Beranda</a></li>
       <li><a href="pilih_kaidah.html">🧠 Pilih Kaidah</a></li>
