--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="intro-card">
       <h2>🔢 Kalkulator Numerik</h2>
       <p>Selamat datang di Kalkulator Numerik, kalkulator online untuk menghitung integral numerik menggunakan metode yang sudah terbukti!</p>
-      <p>Kami menyediakan berbagai metode untuk menghitung integral, seperti <strong>Metode Segi Empat</strong> dan <strong>Metode Titik Tengah</strong>. Pilih salah satu metode yang sesuai dengan kebutuhanmu, dan coba hitung hasil integrasi dari fungsi yang kamu inginkan.</p>
+      <p>Kami menyediakan berbagai metode untuk menghitung integral, seperti <strong>Metode Pias Segi Empat</strong> dan <strong>Metode Titik Tengah</strong>. Pilih salah satu metode yang sesuai dengan kebutuhanmu, dan coba hitung hasil integrasi dari fungsi yang kamu inginkan.</p>
       <a href="pilih_kaidah.html" class="button">🧠 Pilih Kaidah Metode</a>
     </section>
 
