--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <section class="intro-card">
       <h2>🔢 Kalkulator Numerik</h2>
-      <p>Selamat datang di Kalkulator Numerik, kalkulator online untuk menghitung integral numerik menggunakan metode yang sudah terbukti!</p>
+      <p>Selamat datang di aplikasi kalkulator integrasi numerik menggunakan metode pias. Di sini, Anda dapat mempelajari dan menghitung integral menggunakan metode Segiempat dan Titik Tengah.</p>
       <p>Kami menyediakan berbagai metode untuk menghitung integral, seperti <strong>Metode Pias Segi Empat</strong> dan <strong>Metode Titik Tengah</strong>. Pilih salah satu metode yang sesuai dengan kebutuhanmu, dan coba hitung hasil integrasi dari fungsi yang kamu inginkan.</p>
       <a href="pilih_kaidah.html" class="button">🧠 Pilih Kaidah Metode</a>
     </section>
